// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="components-placeholder wp-components-placeholder css-178r7q7"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
/>
`;

exports[`props should render height 1`] = `
<div
  class="components-placeholder wp-components-placeholder css-zvslnd"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
/>
`;

exports[`props should render width 1`] = `
<div
  class="components-placeholder wp-components-placeholder css-18zqu98"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
/>
`;
